syntax = "proto3";
package cowcow;
import "gamecomm.proto";

//【百人类游戏】

//入场 (场景)
message GameCowcowEnter{
	PlayerInfo UserInfo = 1;				//玩家个人信息
	int64 TimeStamp = 2;				//时间戳
	repeated int32 Chips = 3; 			//筹码
	repeated bytes AwardAreas = 4;		//开奖记录(路单)
	uint32 FreeTime = 5;
	uint32 BetTime = 6;
	uint32 OpenTime = 7;
}

//抢庄
message GameCowcowHost {
	uint64 UserID = 1;
    bool IsWant = 2;	//true上庄 false取消上庄
}

message GameCowcowHostResult {

}

//超级抢庄
message GameCowcowSuperHost {
	uint64 UserID = 1;
    bool IsWant = 2;	//true上庄 false取消
}

message GameCowcowSuperHostResult {
	
}

//下注
message GameCowcowBet{
    int32 BetArea = 1;				//下注区域
    int64 BetScore = 2;				//下注金额
}

//下注结果
message GameCowcowBetResult{
	uint64 UserID = 1;					//状态
	int32 BetArea = 2;					//提示
	int64 BetScore = 3;
}

//结束
message GameCowcowOver{
	 bytes AwardArea = 1;	//开奖区域
	 bytes BankerCard = 2;	//庄家的牌
	 bytes TianCard = 3;	//闲家的牌
	 bytes XuanCard = 4;	//庄家的牌
	 bytes DiCard = 5;	//闲家的牌
	 bytes HuangCard = 6;	//闲家的牌
	 int64 Acquire = 7;		//获得金币(结算)
}

